--- a/crates/vfs/Cargo.toml
+++ b/crates/vfs/Cargo.toml
@@ -11,3 +11,4 @@ uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 rusqlite = { version = "0.35", features = ["bundled"] }
+craftsql-store-local = { path = "../store-local" }
